--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Jalen
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: A Full Stack Developer managing OPS and backend team
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars2.githubusercontent.com/u/637376?s=460&v=4
