--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: jalen/jalen.github.com
+  github: jalen/jalen.github.io
   instagram:
   linkedin:
   pinterest:
